--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -820,6 +820,10 @@ $font-size-text-normal: 15px;
 $font-size-text-large: 16px;
 $font-size-text-extra-large: 18px;
 $line-height-text: 1.4;
+$line-height-small: 16px;
+$line-height-normal: 20px;
+$line-height-large: 24px;
+$line-height-extra-large: 24px;
 $line-height-text-small: 16px;
 $line-height-text-normal: 20px;
 $line-height-text-large: 24px;
