--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -855,6 +855,7 @@ $font-weight-medium: 500;
 $font-weight-bold: 700;
 $z-index-default: 1;
 $z-index-sticky: 100;
+$z-index-navigation-bar: 700;
 $z-index-modal-overlay: 800;
 $z-index-drawer: 815;
 $z-index-modal: 825;
