feat(tokens): add zIndexNavigationBar token

--- a/packages/orbit-design-tokens/output/tokens.less
+++ b/packages/orbit-design-tokens/output/tokens.less
@@ -835,6 +835,7 @@
 @font-weight-bold: 700;
 @z-index-default: 1;
 @z-index-sticky: 100;
+@z-index-navigation-bar: 700;
 @z-index-modal-overlay: 800;
 @z-index-drawer: 815;
 @z-index-modal: 825;
