--- a/packages/orbit-design-tokens/output/tokens.styl
+++ b/packages/orbit-design-tokens/output/tokens.styl
@@ -514,6 +514,7 @@ $country-flag-small-height= 9px;
 $country-flag-small-width= 16px;
 $country-flag-medium-height= 13px;
 $country-flag-medium-width= 24px;
+$drawer-overlay-background= rgba(37, 42, 49, 0.5);
 $form-box-small-height= 32;
 $form-box-normal-height= 44;
 $form-box-large-height= 52;
