--- a/packages/orbit-design-tokens/output/tokens.less
+++ b/packages/orbit-design-tokens/output/tokens.less
@@ -514,6 +514,9 @@
 @country-flag-small-width: 16px;
 @country-flag-medium-height: 13px;
 @country-flag-medium-width: 24px;
+@dialog-border-radius-desktop: 9px;
+@dialog-border-radius-mobile: 12px;
+@dialog-width: 540px;
 @drawer-overlay-background: rgba(37, 42, 49, 0.5);
 @form-box-small-height: 32;
 @form-box-normal-height: 44;
