feat(tokens): add Badge padding token

--- a/packages/orbit-design-tokens/output/tokens.less
+++ b/packages/orbit-design-tokens/output/tokens.less
@@ -267,7 +267,7 @@
 @alert-color-text-success: rgb(45, 119, 56);
 @alert-color-text-warning: rgb(173, 87, 0);
 @alert-color-text-link: rgb(79, 94, 113);
-@border-radius-badge: 12;
+@badge-border-radius: 12;
 @badge-bundle-basic-background: linear-gradient(to top right, #E13E3B 0%, #E87E09 100%);
 @badge-bundle-basic-foreground: rgb(255, 255, 255);
 @badge-bundle-medium-background: linear-gradient(to top right, #3719AB 0%, #8539DB 100%);
@@ -296,6 +296,7 @@
 @badge-warning-subtle-foreground: rgb(173, 87, 0);
 @badge-white-background: rgb(255, 255, 255);
 @badge-white-foreground: rgb(37, 42, 49);
+@border-radius-badge: 12;
 @margin-badge-icon: null;
 @margin-button-group: null;
 @margin-button-icon: 8;
