--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -278,7 +278,7 @@ $alert-color-text-info: rgb(0, 90, 163);
 $alert-color-text-success: rgb(45, 119, 56);
 $alert-color-text-warning: rgb(173, 87, 0);
 $alert-color-text-link: rgb(79, 94, 113);
-$border-radius-badge: 12px;
+$badge-border-radius: 12px;
 $badge-bundle-basic-background: linear-gradient(to top right, #e13e3b 0%, #e87e09 100%);
 $badge-bundle-basic-foreground: rgb(255, 255, 255);
 $badge-bundle-medium-background: linear-gradient(to top right, #3719ab 0%, #8539db 100%);
@@ -307,6 +307,7 @@ $badge-warning-subtle-background: rgb(254, 242, 230);
 $badge-warning-subtle-foreground: rgb(173, 87, 0);
 $badge-white-background: rgb(255, 255, 255);
 $badge-white-foreground: rgb(37, 42, 49);
+$border-radius-badge: 12px;
 $margin-badge-icon: 0 4px 0 0;
 $margin-button-group: 0 1px 0 0;
 $margin-button-icon: 8px;
