--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -370,8 +370,12 @@ $button-info-background-active: rgb(1, 80, 142);
 $button-info-foreground: rgb(255, 255, 255);
 $button-info-foreground-hover: rgb(255, 255, 255);
 $button-info-foreground-active: rgb(255, 255, 255);
-$button-disabled-opacity: 0.3;
 $button-without-text-padding: 0;
+$button-padding-x-small: 8px;
+$button-padding-small: 12px;
+$button-padding-normal: 16px;
+$button-padding-large: 24px;
+$button-padding-x-large: 28px;
 $button-primary-subtle-background: rgb(225, 244, 243);
 $button-primary-subtle-background-hover: rgb(214, 240, 236);
 $button-primary-subtle-background-active: rgb(191, 232, 226);
@@ -475,9 +479,6 @@ $font-size-heading-title-3: 18px;
 $font-size-heading-title-4: 16px;
 $font-size-heading-title-5: 15px;
 $font-size-heading-title-6: 13px;
-$opacity-button-disabled: 0.3;
-$opacity-checkbox-disabled: 0.5;
-$opacity-radio-button-disabled: 0.5;
 $border-style-card: solid;
 $border-style-input: solid;
 $border-width-card: 1px;
@@ -555,6 +556,8 @@ $form-element-label-foreground: rgb(79, 94, 113);
 $form-element-label-filled: rgb(105, 125, 149);
 $form-element-prefix-foreground: rgb(105, 125, 149);
 $margin-top-form-feedback: 2px;
+$opacity-checkbox-disabled: 0.5;
+$opacity-radio-button-disabled: 0.5;
 $heading-display-font-size: 40px;
 $heading-display-font-weight: 700;
 $heading-display-line-height: 44px;
