--- a/packages/orbit-design-tokens/output/tokens.styl
+++ b/packages/orbit-design-tokens/output/tokens.styl
@@ -531,17 +531,22 @@ $form-element-border-color-hover= rgb(166, 182, 200);
 $form-element-border-color-active= rgb(148, 168, 190);
 $form-element-border-color-focus= rgb(1, 114, 203); // Should be used for all form-elements when the component has active or focus state and it's needed to render border attribute, or combined with shadows.
 $form-element-border-color-error= rgb(210, 28, 28); // Should be used for all form-elements when the component has error state and it's needed to render border attribute, or combined with shadows.
+$form-element-border-color-error-hover= rgb(185, 25, 25); // Should be used for all form-elements when the component has error and hover state and it's needed to render border attribute, or combined with shadows.
+$form-element-box-shadow= rgb(186, 199, 213);
+$form-element-box-shadow-error= rgb(210, 28, 28);
+$form-element-box-shadow-hover= rgb(166, 182, 200);
+$form-element-box-shadow-error-hover= rgb(185, 25, 25);
 $form-element-focus-box-shadow= rgb(1, 114, 203);
 $form-element-error-focus-box-shadow= rgb(210, 28, 28);
 $form-element-small-font-size= 15;
 $form-element-small-padding= null;
 $form-element-normal-font-size= 15;
 $form-element-normal-padding= null;
-$form-element-foreground= rgb(186, 199, 213); // Should be used for the text when they value is not filled.
-$form-element-filled-foreground= rgb(79, 94, 113);
+$form-element-foreground= rgb(105, 125, 149); // Should be used for the text when the value is not filled.
+$form-element-filled-foreground= rgb(37, 42, 49);
 $form-element-label-foreground= rgb(37, 42, 49);
 $form-element-label-filled= rgb(79, 94, 113);
-$form-element-prefix-foreground= rgb(105, 125, 149);
+$form-element-prefix-foreground= rgb(79, 94, 113);
 $margin-top-form-feedback= 2;
 $opacity-checkbox-disabled= 50;
 $opacity-radio-button-disabled= 50;
