--- a/packages/orbit-design-tokens/output/tokens.css
+++ b/packages/orbit-design-tokens/output/tokens.css
@@ -527,6 +527,7 @@
   --form-element-disabled-background: rgb(232, 237, 241);
   --form-element-disabled-foreground: rgb(79, 94, 113);
   --form-element-disabled-opacity: 50;
+  --form-element-border-color-disabled: transparent;
   --form-element-border-color: rgb(186, 199, 213);
   --form-element-border-color-hover: rgb(166, 182, 200);
   --form-element-border-color-active: rgb(148, 168, 190);
@@ -539,8 +540,6 @@
   --form-element-box-shadow-error-hover: rgb(185, 25, 25);
   --form-element-focus-box-shadow: rgb(1, 114, 203);
   --form-element-error-focus-box-shadow: rgb(210, 28, 28);
-  --form-element-small-font-size: 15;
-  --form-element-small-padding: null;
   --form-element-normal-font-size: 15;
   --form-element-normal-padding: null;
   --form-element-foreground: rgb(105, 125, 149); /* Should be used for the text when the value is not filled. */
@@ -548,6 +547,7 @@
   --form-element-label-foreground: rgb(37, 42, 49);
   --form-element-label-filled: rgb(79, 94, 113);
   --form-element-prefix-foreground: rgb(79, 94, 113);
+  --form-element-small-padding: null;
   --margin-top-form-feedback: 2;
   --opacity-checkbox-disabled: 50;
   --opacity-radio-button-disabled: 50;
