--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -537,6 +537,7 @@ $form-element-background: rgb(255, 255, 255);
 $form-element-disabled-background: rgb(232, 237, 241);
 $form-element-disabled-foreground: rgb(79, 94, 113);
 $form-element-disabled-opacity: 0.5;
+$form-element-border-color-disabled: transparent;
 $form-element-border-color: rgb(186, 199, 213);
 $form-element-border-color-hover: rgb(166, 182, 200);
 $form-element-border-color-active: rgb(148, 168, 190);
@@ -551,8 +552,6 @@ $form-element-focus-box-shadow: inset 0 0 0 1px rgba(1, 114, 203, 1),
   inset 0 0 0 3px rgba(1, 114, 203, 0.15);
 $form-element-error-focus-box-shadow: inset 0 0 0 1px rgba(210, 28, 28, 1),
   inset 0 0 0 3px rgba(210, 28, 28, 0.15);
-$form-element-small-font-size: 15px;
-$form-element-small-padding: 0 12px;
 $form-element-normal-font-size: 15px;
 $form-element-normal-padding: 0 12px;
 $form-element-foreground: rgb(105, 125, 149);
@@ -560,6 +559,7 @@ $form-element-filled-foreground: rgb(37, 42, 49);
 $form-element-label-foreground: rgb(37, 42, 49);
 $form-element-label-filled: rgb(79, 94, 113);
 $form-element-prefix-foreground: rgb(79, 94, 113);
+$form-element-small-padding: 0 12px;
 $margin-top-form-feedback: 2px;
 $opacity-checkbox-disabled: 0.5;
 $opacity-radio-button-disabled: 0.5;
