--- a/packages/orbit-design-tokens/output/tokens.css
+++ b/packages/orbit-design-tokens/output/tokens.css
@@ -613,6 +613,8 @@
   --illustration-large-height: 280;
   --illustration-display-height: 460;
   --loading-foreground: rgb(186, 199, 213);
+  --modal-border-radius-mobile: 12;
+  --modal-border-radius: 9;
   --modal-extra-small-width: 360;
   --modal-small-width: 540;
   --modal-normal-width: 740;
