--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -625,6 +625,8 @@ $illustration-medium-height: 200px;
 $illustration-large-height: 280px;
 $illustration-display-height: 460px;
 $loading-foreground: rgb(186, 199, 213);
+$modal-border-radius-mobile: 12px;
+$modal-border-radius: 9px;
 $modal-extra-small-width: 360px;
 $modal-small-width: 540px;
 $modal-normal-width: 740px;
