chore(tokens): adjust Tabs tokens

--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -664,13 +664,17 @@ $social-button-twitter-foreground-hover: rgb(79, 94, 113);
 $social-button-twitter-foreground-active: rgb(79, 94, 113);
 $social-button-twitter-border-color-focus: rgba(105, 125, 149, 0.5);
 $social-button-twitter-icon-foreground: rgb(0, 172, 238);
-$tab-bundle-basic-background: linear-gradient(80.91deg, #e13e3b 0%, #e87e09 100%);
+$tab-bundle-basic-foreground: linear-gradient(80.91deg, #e13e3b 0%, #e87e09 100%);
+$tab-bundle-basic-background: rgb(255, 255, 255);
 $tab-bundle-basic-background-hover: rgba(215, 51, 28, 0.08);
 $tab-bundle-basic-background-active: rgba(215, 51, 28, 0.12);
-$tab-bundle-medium-background: linear-gradient(80.91deg, #3719ab 0%, #8539db 100%);
+$tab-bundle-medium-foreground: linear-gradient(80.91deg, #3719ab 0%, #8539db 100%);
+$tab-bundle-medium-background: rgb(255, 255, 255);
 $tab-bundle-medium-background-hover: rgba(59, 30, 176, 0.08);
 $tab-bundle-medium-background-active: rgba(59, 30, 176, 0.12);
-$tab-bundle-top-background: linear-gradient(80.91deg, #2d2d2e 0%, #696e73 100%);
+$tab-bundle-top-background: rgb(255, 255, 255);
+$tab-bundle-top-background-hover: rgb(241, 244, 247);
+$tab-bundle-top-foreground: linear-gradient(80.91deg, #2d2d2e 0%, #696e73 100%);
 $tag-colored-background: rgb(232, 244, 253);
 $tag-colored-background-hover: rgb(222, 240, 252);
 $tag-colored-background-active: rgb(199, 228, 250);
