feat(tokens): add borderRadiusFull token

--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -727,6 +727,7 @@ $border-radius-circle: 50%;
 $border-radius-small: 2px;
 $border-radius-normal: 3px;
 $border-radius-large: 6px;
+$border-radius-full: 9999px;
 $breakpoint-medium-mobile: 414;
 $breakpoint-large-mobile: 576;
 $breakpoint-tablet: 768;
