--- a/packages/orbit-design-tokens/output/tokens.styl
+++ b/packages/orbit-design-tokens/output/tokens.styl
@@ -714,6 +714,7 @@ $border-radius-circle= 50%;
 $border-radius-small= 2;
 $border-radius-normal= 3;
 $border-radius-large= 6;
+$border-radius-full= 9999;
 $breakpoint-medium-mobile= 414;
 $breakpoint-large-mobile= 576;
 $breakpoint-tablet= 768;
