feat(tokens): add new borderRadius tokens and deprecate others
New tokens: none, 50, 100, 150, 300, 400
Deprecated tokens: small, normal, large

--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -723,10 +723,16 @@ $text-critical-foreground: rgb(210, 28, 28);
 $text-white-background: rgba(255, 255, 255, 0.1);
 $text-white-foreground: rgb(255, 255, 255);
 $background-illustration: transparent;
+$border-radius-50: 2px;
+$border-radius-100: 4px;
+$border-radius-150: 6px;
+$border-radius-300: 12px;
+$border-radius-400: 16px;
 $border-radius-circle: 50%;
 $border-radius-small: 2px;
 $border-radius-normal: 3px;
 $border-radius-large: 6px;
+$border-radius-none: 0;
 $border-radius-full: 9999px;
 $breakpoint-medium-mobile: 414;
 $breakpoint-large-mobile: 576;
