--- a/packages/orbit-design-tokens/output/tokens.less
+++ b/packages/orbit-design-tokens/output/tokens.less
@@ -710,10 +710,16 @@
 @text-white-background: rgba(255, 255, 255, 0.1);
 @text-white-foreground: rgb(255, 255, 255);
 @background-illustration: transparent;
+@border-radius-50: 2;
+@border-radius-100: 4;
+@border-radius-150: 6;
+@border-radius-300: 12;
+@border-radius-400: 16;
 @border-radius-circle: 50%;
 @border-radius-small: 2;
 @border-radius-normal: 3;
 @border-radius-large: 6;
+@border-radius-none: 0;
 @border-radius-full: 9999;
 @breakpoint-medium-mobile: 414;
 @breakpoint-large-mobile: 576;
