--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -844,6 +844,18 @@ $palette-white: rgb(255, 255, 255);
 $palette-white-normal: rgb(255, 255, 255);
 $palette-white-hover: rgb(241, 244, 247);
 $palette-white-active: rgb(231, 236, 241);
+$space-50: 2px;
+$space-100: 4px;
+$space-150: 6px;
+$space-200: 8px;
+$space-300: 12px;
+$space-400: 16px;
+$space-500: 20px;
+$space-600: 24px;
+$space-800: 32px;
+$space-1000: 40px;
+$space-1200: 48px;
+$space-1600: 64px;
 $space-x-x-x-small: 2px;
 $space-x-x-small: 4px;
 $space-x-small: 8px;
